--- a/keras-to-hls/keras-config.yml
+++ b/keras-to-hls/keras-config.yml
@@ -1,10 +1,10 @@
-KerasJson: example-keras-model-files/KERAS_1layer.json
-KerasH5:   example-keras-model-files/KERAS_1layer_weights.h5
-OutputDir: my-hls-test-r1
+KerasJson: muon/model_2GeV.10.json
+KerasH5:   muon/model_weights_2GeV.10.h5
+OutputDir: my-hls-test-muon
 ProjectName: myproject
 XilinxPart: xc7vx690tffg1927-2
 ClockPeriod: 5
 
-IOType: io_serial # options: io_serial/io_parallel
-ReuseFactor: 1
+IOType: io_parallel # options: io_serial/io_parallel
+ReuseFactor: 2
 DefaultPrecision: ap_fixed<18,8> 
