--- a/example-models/keras-config-mnist-prune95-4096.yml
+++ b/example-models/keras-config-mnist-prune95-4096.yml
@@ -15,6 +15,6 @@ HLSConfig:
     Precision: ap_fixed<16,6>
     ReuseFactor: 4096
     Strategy: Resource
-  LayerName:
-    dense_1:
-      ReuseFactor: 784
+#  LayerName:
+#    dense_1:
+#      ReuseFactor: 112
