--- a/example-models/keras-config-3layer.yml
+++ b/example-models/keras-config-3layer.yml
@@ -5,7 +5,8 @@ OutputPredictions: keras/KERAS_3layer_predictions.dat
 TruthLabels: keras/KERAS_3layer_truth_labels.dat
 OutputDir: my-hls-test-3layer
 ProjectName: myproject
-XilinxPart: xcvu9p-fsgd2104-2-i
+#XilinxPart: xcvu9p-fsgd2104-2-i
+XilinxPart: xcku115-flvb2104-2-i
 ClockPeriod: 5
 
 IOType: io_parallel # options: io_serial/io_parallel
